[gd_scene load_steps=36 format=4 uid="uid://dtvd8y0a3u3n0"]

[ext_resource type="Script" path="res://scripts/Boss1Room.gd" id="1_j82m5"]
[ext_resource type="Script" path="res://scripts/enemy_control.gd" id="2_im668"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="3_in51r"]
[ext_resource type="Material" uid="uid://b866f4ff4lu3u" path="res://Textures/unshaded_ui_mat.tres" id="4_2oym3"]
[ext_resource type="Texture2D" uid="uid://dukavvigm7qyg" path="res://Textures/characters/boss_1.png" id="5_4ec1r"]
[ext_resource type="Texture2D" uid="uid://b8r3prh8gxjht" path="res://Textures/characters/triangle_active.png" id="6_r8oxk"]
[ext_resource type="Texture2D" uid="uid://ctl6t71jflewk" path="res://Textures/characters/triangle_inactive.png" id="7_kjqff"]
[ext_resource type="Texture2D" uid="uid://b2hdsm2gyh3n2" path="res://Textures/characters/triangle_boss.png" id="8_3pk37"]
[ext_resource type="AnimationLibrary" uid="uid://b7e3c06etyhfm" path="res://animations/enemy.res" id="9_3fewp"]
[ext_resource type="AudioStream" uid="uid://ua0ht7o1885t" path="res://sfx/Roar__007.wav" id="10_g078r"]
[ext_resource type="AudioStream" uid="uid://dnqcphrnc5ocj" path="res://sfx/Bass Drum__001.wav" id="11_derxk"]
[ext_resource type="Script" path="res://scripts/camera_2d.gd" id="12_7k52s"]
[ext_resource type="PackedScene" uid="uid://pt57p26pop1" path="res://scenes/connected_players.tscn" id="13_qjde3"]
[ext_resource type="TileSet" uid="uid://btud2pws16bag" path="res://Textures/misc/TileSet.tres" id="14_1bvhs"]
[ext_resource type="PackedScene" uid="uid://shbpwr4gt3cp" path="res://scenes/player_health_bar.tscn" id="15_oe5ja"]
[ext_resource type="PackedScene" path="res://scenes/pause_menu.tscn" id="16_fr3lf"]
[ext_resource type="PackedScene" uid="uid://b60tija8w1xw3" path="res://scenes/music_player.tscn" id="17_ob18a"]
[ext_resource type="AudioStream" uid="uid://dtjc8yi7m8ac6" path="res://music/BossOpening1.mp3" id="18_efkyw"]
[ext_resource type="AudioStream" uid="uid://ddyl8hpkg3are" path="res://music/boss_win.mp3" id="19_86gug"]
[ext_resource type="PackedScene" uid="uid://fja40kx2ag3p" path="res://scenes/scene_changer.tscn" id="19_gyw1e"]
[ext_resource type="PackedScene" path="res://scenes/door.tscn" id="20_asoyi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wskqp"]
atlas = ExtResource("5_4ec1r")
region = Rect2(0, 15, 16, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_vflaq"]
atlas = ExtResource("5_4ec1r")
region = Rect2(0, 0, 16, 15)

[sub_resource type="SpriteFrames" id="SpriteFrames_uj4bg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wskqp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vflaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wskqp")
}],
"loop": false,
"name": &"spit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_r8oxk")
}],
"loop": true,
"name": &"triangle_child",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_kjqff")
}],
"loop": true,
"name": &"triangle_deactivate",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_3pk37")
}],
"loop": false,
"name": &"triangleboss",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fq7qp"]
radius = 43.566

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_3dy6a"]
polygon = PackedVector2Array(-3.1, -5.6, -3.1, -4.6, -5.1, -4.6, -5.1, -3.6, -6.1, -3.6, -6.1, -2.6, -7.1, -2.6, -7.1, -0.6, -8, -0.6, -8, 4.6, -7.1, 4.6, -7.1, 6.6, -6.1, 6.6, -6.1, 7.6, -5.1, 7.6, -5.1, 8.6, -3.1, 8.6, -3.1, 9.5, 3.1, 9.5, 3.1, 8.6, 5.1, 8.6, 5.1, 7.6, 6.1, 7.6, 6.1, 6.6, 7.1, 6.6, 7.1, 4.6, 8, 4.6, 8, -0.6, 7.1, -0.6, 7.1, -2.6, 6.1, -2.6, 6.1, -3.6, 5.1, -3.6, 5.1, -4.6, 4.1, -4.6, 4.1, -5.6)

[sub_resource type="Environment" id="Environment_ykgmf"]
background_mode = 3
glow_enabled = true
glow_blend_mode = 1
fog_density = 0.7928
fog_height = 754.53
fog_height_density = -3.0877

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nd5c7"]
bg_color = Color(0.154876, 0.154876, 0.154876, 0.466667)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mg12c"]
bg_color = Color(1, 0, 0, 0.647059)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)

[sub_resource type="GDScript" id="GDScript_gp4pq"]
script/source = "extends ProgressBar


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cdq05"]
size = Vector2(512, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ym6uk"]
size = Vector2(24, 218)

[sub_resource type="Animation" id="Animation_icfto"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/BossHealth:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BossIntro:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MusicPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MusicPlayer:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Boss/Enemy/face:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.5, 0.5, 0.5, 0.6)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Boss/Enemy/face:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}

[sub_resource type="Animation" id="Animation_rrt26"]
resource_name = "boss_start"
length = 6.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/BossHealth:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BossIntro:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MusicPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(6.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MusicPlayer:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(6.3, 6.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-20.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Boss/Enemy/face:modulate")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 6.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.5, 0.5, 0.5, 0.6), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Boss/Enemy/face:scale")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(5, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jwnji"]
_data = {
"RESET": SubResource("Animation_icfto"),
"boss_start": SubResource("Animation_rrt26")
}

[node name="Boss1" type="Node2D"]
script = ExtResource("1_j82m5")
metadata/_edit_horizontal_guides_ = [-72.0]

[node name="Boss" type="Node2D" parent="."]
script = ExtResource("2_im668")
metadata/_edit_group_ = true

[node name="Cooldown" type="Timer" parent="Boss"]
wait_time = 2.0
autostart = true

[node name="Enemy" type="CharacterBody2D" parent="Boss" groups=["enemy"]]
rotation = -3.14159
script = ExtResource("3_in51r")
attack_interval_range = Vector2(0.75, 1.25)

[node name="face" type="AnimatedSprite2D" parent="Boss/Enemy"]
modulate = Color(0.5, 0.5, 0.5, 0.6)
z_index = 1
material = ExtResource("4_2oym3")
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_uj4bg")
animation = &"spit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Boss/Enemy/face"]
libraries = {
"": ExtResource("9_3fewp")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss/Enemy"]
rotation = 0.00182393
shape = SubResource("CircleShape2D_fq7qp")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="Boss/Enemy"]
position = Vector2(-2.53518e-05, -10)
scale = Vector2(5, 5)
occluder = SubResource("OccluderPolygon2D_3dy6a")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Boss/Enemy"]
stream = ExtResource("10_g078r")
bus = &"SFX"

[node name="Damage_sound" type="AudioStreamPlayer2D" parent="Boss/Enemy"]
stream = ExtResource("11_derxk")
bus = &"SFX"

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.674815, 0.674815, 0.674815, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 224)
rotation = 0.00103694
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("12_7k52s")

[node name="Players" parent="." instance=ExtResource("13_qjde3")]
position = Vector2(0, 448)
rotation = 0.00103694

[node name="TileMapLayer" type="TileMapLayer" parent="." groups=["object"]]
z_index = -1
position = Vector2(-64, -28)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAD+////AAACAAIAAAD/////AAACAAIAAAAAAP//AAACAAIAAAABAP//AAACAAIAAAAAAAAAAAACAAIAAAD//wAAAAACAAIAAAD+/wAAAAACAAIAAAD+/wEAAAACAAIAAAD//wEAAAACAAIAAAAAAAEAAAACAAIAAAABAAEAAAACAAIAAAABAAAAAAACAAIAAAACAAAAAAACAAIAAAADAAAAAAACAAIAAAAEAAAAAAADAAIAAAD8//7/AAACAAAAAAD8////AAADAAIAAAD8/wAAAAADAAIAAAD8/wEAAAADAAIAAAD8/wIAAAACAAIAAAD8/wMAAAACAAIAAAD8/wQAAAACAAIAAAD9//7/AAACAAAAAAD9////AAADAAIAAAD9/wAAAAADAAIAAAD9/wEAAAACAAIAAAD9/wIAAAACAAIAAAD9/wMAAAACAAIAAAD9/wQAAAACAAIAAAD+//7/AAACAAAAAAD+/wIAAAACAAIAAAD+/wMAAAACAAIAAAD+/wQAAAACAAIAAAD///7/AAACAAAAAAD//wIAAAACAAIAAAD//wMAAAACAAIAAAD//wQAAAACAAIAAAAAAP7/AAACAAAAAAAAAAIAAAACAAIAAAAAAAMAAAACAAIAAAAAAAQAAAACAAIAAAABAP7/AAACAAAAAAABAAIAAAACAAIAAAABAAMAAAACAAIAAAABAAQAAAACAAIAAAACAP7/AAACAAAAAAACAP//AAACAAIAAAACAAEAAAACAAIAAAACAAIAAAACAAIAAAACAAMAAAACAAIAAAACAAQAAAACAAIAAAADAP7/AAACAAAAAAADAP//AAACAAIAAAADAAEAAAACAAIAAAADAAIAAAACAAIAAAADAAMAAAACAAIAAAADAAQAAAACAAIAAAAEAP7/AAACAAAAAAAEAP//AAADAAIAAAAEAAEAAAACAAIAAAAEAAIAAAACAAIAAAAEAAMAAAACAAIAAAAEAAQAAAACAAIAAAD8/wUAAAADAAIAAAD9/wUAAAACAAIAAAD+/wUAAAACAAIAAAD//wUAAAACAAIAAAAAAAUAAAACAAIAAAABAAUAAAACAAIAAAACAAUAAAACAAIAAAADAAUAAAACAAIAAAAEAAUAAAACAAIAAAAFAAUAAAABAAIAAAAFAAQAAAACAAIAAAAFAAMAAAACAAIAAAAFAAIAAAACAAIAAAAFAAEAAAABAAIAAAAFAAAAAAABAAIAAAAFAP//AAABAAIAAAAFAP7/AAACAAAAAAD4//7/AAAAAAAAAAD4////AAAAAAEAAAD4/wAAAAAAAAIAAAD4/wEAAAAAAAIAAAD4/wIAAAAAAAIAAAD4/wMAAAAGAAMAAED4/wQAAAAAAAIAAAD4/wUAAAAAAAIAAAD4/wYAAAAAAAIAAAD4/wcAAAAAAAMAAAD4/wgAAAAAAAAAAAD5//7/AAABAAAAAAD5////AAABAAEAAAD5/wAAAAABAAIAAAD5/wEAAAADAAIAAAD5/wIAAAACAAIAAAD5/wMAAAACAAIAAAD5/wQAAAACAAIAAAD5/wUAAAADAAIAAAD5/wYAAAABAAIAAAD5/wcAAAABAAMAAAD5/wgAAAABAAQAAAD6//7/AAACAAAAAAD6////AAABAAIAAAD6/wAAAAABAAIAAAD6/wEAAAADAAIAAAD6/wIAAAACAAIAAAD6/wMAAAACAAIAAAD6/wQAAAACAAIAAAD6/wUAAAADAAIAAAD6/wYAAAABAAIAAAD6/wcAAAABAAIAAAD6/wgAAAACAAQAAAD7//7/AAACAAAAAAD7////AAADAAIAAAD7/wAAAAADAAIAAAD7/wEAAAADAAIAAAD7/wIAAAACAAIAAAD7/wMAAAACAAIAAAD7/wQAAAACAAIAAAD7/wUAAAADAAIAAAD7/wYAAAADAAIAAAD7/wcAAAADAAIAAAD7/wgAAAACAAQAAAD8/wYAAAADAAIAAAD8/wcAAAADAAIAAAD8/wgAAAACAAQAAAD9/wYAAAADAAIAAAD9/wcAAAADAAIAAAD9/wgAAAACAAQAAAD+/wYAAAACAAIAAAD+/wcAAAACAAIAAAD+/wgAAAACAAQAAAD//wYAAAACAAIAAAD//wcAAAACAAIAAAD//wgAAAACAAQAAAAAAAYAAAACAAIAAAAAAAcAAAACAAIAAAAAAAgAAAAGAAMAAAABAAYAAAACAAIAAAABAAcAAAACAAIAAAABAAgAAAAGAAMAABACAAYAAAACAAIAAAACAAcAAAACAAIAAAACAAgAAAACAAQAAAADAAYAAAACAAIAAAADAAcAAAACAAIAAAADAAgAAAACAAQAAAAEAAYAAAADAAIAAAAEAAcAAAADAAIAAAAEAAgAAAACAAQAAAAFAAYAAAABAAIAAAAFAAcAAAABAAIAAAAFAAgAAAACAAQAAAAGAP7/AAACAAAAAAAGAP//AAABAAIAAAAGAAAAAAABAAIAAAAGAAEAAAABAAIAAAAGAAIAAAACAAIAAAAGAAMAAAACAAIAAAAGAAQAAAACAAIAAAAGAAUAAAABAAIAAAAGAAYAAAABAAIAAAAGAAcAAAABAAIAAAAGAAgAAAACAAQAAAAHAP7/AAACAAAAAAAHAP//AAABAAIAAAAHAAAAAAABAAIAAAAHAAEAAAABAAIAAAAHAAIAAAACAAIAAAAHAAMAAAACAAIAAAAHAAQAAAACAAIAAAAHAAUAAAABAAIAAAAHAAYAAAABAAIAAAAHAAcAAAABAAIAAAAHAAgAAAACAAQAAAAIAP7/AAADAAAAAAAIAP//AAADAAEAAAAIAAAAAAABAAIAAAAIAAEAAAABAAIAAAAIAAIAAAACAAIAAAAIAAMAAAACAAIAAAAIAAQAAAACAAIAAAAIAAUAAAABAAIAAAAIAAYAAAABAAIAAAAIAAcAAAADAAMAAAAIAAgAAAADAAQAAAAJAP7/AAAAAAAAAAAJAP//AAAEAAEAAAAJAAAAAAAEAAIAAAAJAAEAAAAEAAIAAAAJAAIAAAAEAAIAAAAJAAMAAAAEAAIAAAAJAAQAAAAEAAIAAAAJAAUAAAAEAAIAAAAJAAYAAAAEAAIAAAAJAAcAAAAEAAMAAAAJAAgAAAAAAAAAAAA=")
tile_set = ExtResource("14_1bvhs")

[node name="TileMapLayer2" type="TileMapLayer" parent="." groups=["object", "pillar"]]
z_index = -1
position = Vector2(-64, -28)
scale = Vector2(4, 4)
tile_map_data = PackedByteArray("AAAEAAEAAAAGAAQAAAD9/wEAAAAGAAQAAAA=")
tile_set = ExtResource("14_1bvhs")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ykgmf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerHealth" parent="CanvasLayer" instance=ExtResource("15_oe5ja")]
modulate = Color(1, 1, 1, 0.760784)
offset_left = 4.0
offset_top = 4.0
offset_right = 53.0
offset_bottom = 13.0
scale = Vector2(6, 6)
pivot_offset = Vector2(3.16063e-05, 0.00147909)

[node name="BossHealth" type="ProgressBar" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
material = ExtResource("4_2oym3")
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -227.0
offset_top = -42.0
offset_right = 227.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_nd5c7")
theme_override_styles/fill = SubResource("StyleBoxFlat_mg12c")
step = 1.0
value = 100.0
show_percentage = false
script = SubResource("GDScript_gp4pq")

[node name="Label" type="Label" parent="CanvasLayer/BossHealth"]
material = ExtResource("4_2oym3")
layout_mode = 0
offset_top = -23.0
offset_right = 40.0
text = "EVIL BOSS MAN"

[node name="pause_menu" parent="." instance=ExtResource("16_fr3lf")]
visible = false

[node name="MusicPlayer" parent="." instance=ExtResource("17_ob18a")]

[node name="BossIntro" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("18_efkyw")
bus = &"Music"

[node name="BossWin" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("19_86gug")
bus = &"Music"

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 448)

[node name="Trigger" type="Area2D" parent="."]
position = Vector2(0, 448)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trigger"]
position = Vector2(0, -144)
shape = SubResource("RectangleShape2D_cdq05")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Trigger"]
position = Vector2(-244, -45)
shape = SubResource("RectangleShape2D_ym6uk")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Trigger"]
position = Vector2(240, -48)
shape = SubResource("RectangleShape2D_ym6uk")

[node name="SceneChanger" parent="." instance=ExtResource("19_gyw1e")]
visible = false

[node name="Door" parent="." instance=ExtResource("20_asoyi")]
position = Vector2(-480, 200)
rotation = -1.5708
scene_file = "res://scenes/boss3.tscn"
shader_pos = Vector2(-0.3, 0.5)

[node name="BossStart" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jwnji")
}

[connection signal="timeout" from="Boss/Cooldown" to="Boss/Enemy" method="_on_cooldown_timeout"]
[connection signal="animation_finished" from="Boss/Enemy/face/AnimationPlayer" to="Boss/Enemy" method="_on_animation_player_animation_finished"]
